# clawctrl

./: clawctrl.ioc
clawctrl/: .gitignore  .mxproject  CMakeLists.txt  Makefile  STM32L412KBUx_FLASH.ld  clawctrl.ioc
clawctrl/Inc/: claw_hal.h  colors.h  digiled.h  lighteffect.h  main.h  stm32h7xx_hal_conf.h  stm32l4xx_hal_conf.h
clawctrl/Src/: claw_hal.c  digiled.c  lighteffect.c  main.c  stm32h7xx_hal_msp.c  stm32l4xx_hal_msp.c
